--- a/views/home.html
+++ b/views/home.html
@@ -34,7 +34,7 @@
         <section>
 
             <h2>Ofertas</h2>
-            
+
             <div>
 
                 <div>
@@ -91,6 +91,24 @@
     </main>
 
     <footer>
+
+        <img src="/images/img-home-banner.jpg" alt="banner-promocional">
+
+        <div>
+
+            <strong>Pagá con tarjeta o en efectivo:</strong>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
+                seguro!</p>
+            <strong>Envío gratis desde $2.500:</strong>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+                Mercado Puntos.</p>
+            <strong>Seguridad, de principio a fin:</strong>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
+                protegid@.</p>
+
+            <p><strong>&copy; 1999-2020 MercadoLiebre S.R.L.</strong></p>
+        </div>
+
 
 
     </footer>
