--- a/views/home.html
+++ b/views/home.html
@@ -9,85 +9,73 @@
 
 <body>
     <header>
-        <img src="/images/logo-mercado-liebre.svg" alt="logo Mercado Liebre">
-        <nav>
-            <h3>Lugar para poner la barra de búsqueda</h3>
-            <h3>Comprá en cuotas y sin tarjeta de crédito</h3>
-            <ul>
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Tiendas Oficiales</a></li>
-                <li><a href="">Vender</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
-
-            <ul>
-                <li><a href="">Creá tu cuenta</a></li>
-                <li><a href="">Ingresá</a></li>
-                <li><a href="">Mis compras</a></li>
-            </ul>
-        </nav>
-
-
+      
+      <img src="/images/logo-mercado-liebre.svg" alt="logo Mercado Liebre">
+      <nav>
+        <h3>Lugar para poner la barra de búsqueda</h3>
+        <h3>Comprá en cuotas y sin tarjeta de crédito</h3>
+        <ul>
+          <li><a href="">Ofertas</a></li>
+          <li><a href="">Tiendas Oficiales</a></li>
+          <li><a href="">Vender</a></li>
+          <li><a href="">Ayuda</a></li>
+        </ul>
+        <ul>
+          <li><a href="">Creá tu cuenta</a></li>
+          <li><a href="">Ingresá</a></li>
+          <li><a href="">Mis compras</a></li>
+        </ul>
+      </nav>
     </header>
-
+  
     <main>
-        <section>
-
-            <h2>Ofertas</h2>
-
-            <div>
-
-                <div>
-                    <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera">
-                </div>
-
-                <div>
-                    <h3>Cafetera Moulinex</h3>
-                    <p>$6.770</p>
-                    <p>40% OFF</p>
-                </div>
-
-            </div>
-
-            <div>
-
-                <div>
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="Cafetera Moulinex">
-                </div>
-                <div>
-                    <h3>MacBook Pro 2019</h3>
-                    <p>$230.000</p>
-                    <p>20% off</p>
-                </div>
-
-            </div>
-
-            <div>
-
-                <div>
-                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex">
-                </div>
-                <div>
-                    <h3>Samsung Galaxy S10</h3>
-                    <p>$70.500</p>
-                    <p>10% off</p>
-                </div>
-            </div>
-
-            <div>
-
-                <div>
-                    <img src="/images/img-tv-samsung-smart.jpg" alt="Cafetera Moulinex">
-                </div>
-                <div>
-                    <h3>SmartTv Samsung 43"</h3>
-                    <p>$23.200</p>
-                    <p>5% off</p>
-                </div>
-            </div>
-
-        </section>
-
+      <section>
+        <h2>Ofertas</h2>
+  
+        <article>
+          <figure>
+            <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera">
+            <figcaption>
+              <h3>Cafetera Moulinex</h3>
+              <p>$6.770</p>
+              <p>40% OFF</p>
+            </figcaption>
+          </figure>
+        </article>
+  
+        <article>
+          <figure>
+            <img src="/images/img-macbook-pro-2019.jpg" alt="Cafetera Moulinex">
+            <figcaption>
+              <h3>MacBook Pro 2019</h3>
+              <p>$230.000</p>
+              <p>20% off</p>
+            </figcaption>
+          </figure>
+        </article>
+  
+        <article>
+          <figure>
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex">
+            <figcaption>
+              <h3>Samsung Galaxy S10</h3>
+              <p>$70.500</p>
+              <p>10% off</p>
+            </figcaption>
+          </figure>
+        </article>
+  
+        <article>
+          <figure>
+            <img src="/images/img-tv-samsung-smart.jpg" alt="Cafetera Moulinex">
+            <figcaption>
+              <h3>SmartTv Samsung 43"</h3>
+              <p>$23.200</p>
+              <p>5% off</p>
+            </figcaption>
+          </figure>
+        </article>
+      </section>
     </main>
 
     <footer>
