--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
             <img class="image-logo" src="/images/logo-mercado-liebre.svg" alt="logo Mercado Liebre">
         </div>
         <nav>
-            <div class="home-icon-haeder">
+            <div class="home-icon-header">
                 <form>
                     <input class="form-control me-2" type="search" placeholder="Buscar productos, marcas">
 
