adaptando main  mobil tablet y desktop

--- a/views/home.html
+++ b/views/home.html
@@ -67,53 +67,164 @@
 
     <main class="home-main">
         <section>
-            <h2>Ofertas</h2>
-
-            <article>
-
-                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera">
-
-                <h3>Cafetera Moulinex</h3>
-                <p>$6.770</p>
-                <p>40% OFF</p>
-            </article>
-
-            <article>
-
-                <img src="/images/img-macbook-pro-2019.jpg" alt="Cafetera Moulinex">
-
-                <h3>MacBook Pro 2019</h3>
-                <p>$230.000</p>
-                <p>20% off</p>
-            </article>
+            <div class="home-banner">
+                <img class="banner-img" src="/images/img-home-banner.jpg" alt="banner-promocional">
+            </div>
 
 
-            <article>
+            <div class="home-main-card">
 
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex">
+                <article class="card">
+                    <div class="titulo-card">
+                        <h2>Ofertas</h2>
+                    </div>
+                    <div class="card-container">
+                        <img src="/images/img-cafetera-moulinex.jpg" class="card-img-top" alt="Cafetera">
+                        <div class="card-body">
+                            <div class="card-icon-circle">
+                                <i class="fa-solid fa-truck"></i>
 
-                <h3>Samsung Galaxy S10</h3>
-                <p>$70.500</p>
-                <p>10% off</p>
+                            </div>
 
-            </article>
+                            <div class="card-price">
+                                <p>$6.770</p>
+
+                            </div>
+
+                            <div class="card-descuento">
+                                <p>40% OFF</p>
+
+                            </div>
+
+                            <div class="card-titulo-producto">
+                                <h3>Cafetera Moulinex</h3>
+
+                            </div>
 
 
-            <article>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="titulo-card">
+                        <h2>Ofertas</h2>
+                    </div>
+                    <div class="card-container">
+                        <img src="/images/img-macbook-pro-2019.jpg" class="card-img-top" alt="Cafetera">
+                        <div class="card-body">
+                            <div class="card-icon-circle">
+                                <i class="fa-solid fa-truck"></i>
+
+                            </div>
+
+                            <div class="card-price">
+                                <p>$230.000</p>
+
+                            </div>
+
+                            <div class="card-descuento">
+                                <p>20% off</p>
+
+                            </div>
+
+                            <div class="card-titulo-producto">
+                                <h3>MacBook Pro 2019</h3>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="titulo-card">
+                        <h2>Ofertas</h2>
+                    </div>
+                    <div class="card-container">
+                        <img src="/images/img-samsung-galaxy-s10.jpg" class="card-img-top" alt="Cafetera">
+                        <div class="card-body">
+                            <div class="card-icon-circle">
+                                <i class="fa-solid fa-truck"></i>
+
+                            </div>
+
+                            <div class="card-price">
+                                <p>$70.500</p>
+
+                            </div>
+
+                            <div class="card-descuento">
+                                <p>10% off</p>
+
+                            </div>
+
+                            <div class="card-titulo-producto">
+                                <h3>Samsung Galaxy S10</h3>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="titulo-card">
+                        <h2>Ofertas</h2>
+                    </div>
+                    <div class="card-container">
+                        <img src="/images/img-tv-samsung-smart.jpg" class="card-img-top" alt="Cafetera">
+                        <div class="card-body">
+                            <div class="card-icon-circle">
+                                <i class="fa-solid fa-truck"></i>
+
+                            </div>
+
+                            <div class="card-price">
+                                <p>$23.200</p>
+
+                            </div>
+
+                            <div class="card-descuento">
+                                <p>5% off</p>
+
+                            </div>
+
+                            <div class="card-titulo-producto">
+                                <h3>SmartTv Samsung 43"</h3>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+                </article>
+
+
+            </div>
+
+
+
+
+
+
+            <!-- <article>
 
                 <img src="/images/img-tv-samsung-smart.jpg" alt="Cafetera Moulinex">
 
                 <h3>SmartTv Samsung 43"</h3>
                 <p>$23.200</p>
                 <p>5% off</p>
-            </article>
+            </article> -->
 
         </section>
     </main>
 
     <footer>
 
-        <img class="footer-img" src="/images/img-home-banner.jpg" alt="banner-promocional">
+
 
         <div class="footer-date">
             <div class="footer-icon">
