--- a/public/css/home.css
+++ b/public/css/home.css
@@ -22,7 +22,6 @@
 
 .icon-header i {
     background-color: #ebebeb;
-    ;
     border: solid 1px #666;
     border-radius: 2px;
     margin-top: 3px;
@@ -60,7 +59,7 @@
 }
 
 .header-bottom-menu {
-    margin: 20px 0;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -71,17 +70,110 @@
     padding: 5px 5px;
 }
 
+.banner-img {
+    width: 100vw;
+    height: auto;
+}
+
+
 /*  MAIN */
 
-.home-main {
-    display: none;
+.home-main-card{
+    display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.card {
+    max-width: 95%;
+    background-color: #ebebeb;
+    box-shadow: rgba(0, 0, 0, 0.075);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.card-container {
+    max-width: 95%;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+.card-img-top {
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.titulo-card {
+
+    margin-bottom: 10px;
+
+}
+
+.card-body {
+    border-top: 1px solid #ebebeb;
+    padding-top: 10px;
+    padding-left: 15px;
+
+}
+
+.card-icon-circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #39b54a;
+    color: #39b54a;
+
+}
+
+.card-icon-circle i {
+    margin-top: 6px;
+    margin-left: 3px;
+}
+
+.card-descuento {
+    color: #39b54a;
+    line-height: 2;
+}
+
+.card-titulo-producto {
+    line-height: 2;
+}
+
+/*/////TABLET ---desktop//////*/
+@media(min-width:481px) {
+
+    .home-main-card {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 10px;
+        justify-content: center;
+    }
+
+    .card {
+        flex: 1 0 200px;
+        background-color: #ebebeb;
+        box-shadow: rgba(0, 0, 0, 0.075);
+        margin-bottom: 10px;
+        
+    }
+
+    .card-container {
+        max-width: 95%;
+        background-color: white;
+        margin-bottom: 10px;
+        height: 100%;
+    }
 }
 
 
-/*  FOOTER */
-.footer-img {
-    display: none;
-}
+
+
+/* /////// FOOTER///////// */
+
 
 .footer-date {
 
