adpatando header navbar para mobil tablet y desktop

--- a/views/home.html
+++ b/views/home.html
@@ -31,32 +31,37 @@
                 <h5>Comprá en cuotas y sin tarjeta de crédito</h5>
 
             </div>
-            <ul class="home-nav">
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Tiendas Oficiales</a></li>
-                <li><a href="">Vender</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
-            <ul class="home-nav">
+            
+            <div class="nav-menu">
 
-                <div class="home-nav-date">
-                    <li><a href="">Creá tu cuenta</a></li>
-                    <i class="fa-solid fa-id-card"></i>
+                <ul class="home-nav">
+                    <li><a href="">Ofertas</a></li>
+                    <li><a href="">Tiendas Oficiales</a></li>
+                    <li><a href="">Vender</a></li>
+                    <li><a href="">Ayuda</a></li>
+                </ul>
+                <ul class="home-nav">
+    
+                    <div class="home-nav-date">
+                        <li><a href="">Creá tu cuenta</a></li>
+                        <i class="fa-solid fa-id-card"></i>
+    
+                    </div>
+    
+                    <div class="home-nav-date">
+    
+                        <li><a href="">Ingresá</a></li>
+                        <i class="fa-solid fa-right-to-bracket"></i>
+                    </div>
+    
+                    <div class="home-nav-date">
+    
+                        <li><a href="">Mis compras</a></li>
+                        <i class="fa-sharp fa-solid fa-basket-shopping"></i>
+                    </div>
+                </ul>
 
-                </div>
-
-                <div class="home-nav-date">
-
-                    <li><a href="">Ingresá</a></li>
-                    <i class="fa-solid fa-right-to-bracket"></i>
-                </div>
-
-                <div class="home-nav-date">
-
-                    <li><a href="">Mis compras</a></li>
-                    <i class="fa-sharp fa-solid fa-basket-shopping"></i>
-                </div>
-            </ul>
+            </div>
 
             <div class="header-bottom-menu">
                 <a class="bottom"><i class="fas fa-bars fa-lg"></i></a>
