--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,7 +2,7 @@
 
 .home-header {
     background-color: #EAC926;
-    ;
+    padding-bottom: 15px;
 }
 
 .home-image-logo {
@@ -39,23 +39,12 @@
 .home-header-cuotas {
     display: flex;
     justify-content: center;
-
+    
 }
 
-.home-nav {
-    margin: 15px 0;
-}
+.nav-menu {
+    display: none;
 
-.home-nav a {
-
-    font-size: 13px;
-    font-weight: bold;
-    margin-right: 4px;
-}
-
-.home-nav-date {
-    display: flex;
-    align-items: center;
 }
 
 .header-bottom-menu {
@@ -76,13 +65,15 @@
 }
 
 
+
 /*  MAIN */
 
-.home-main-card{
+.home-main-card {
     display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+    justify-content: center;
+    flex-wrap: wrap;
 }
+
 .card {
     max-width: 95%;
     background-color: #ebebeb;
@@ -145,7 +136,30 @@
 
 /*/////TABLET ---desktop//////*/
 @media(min-width:481px) {
+    .nav-menu {
+        display: block;
+        margin: 0 10px;
+    
+    }
+    .header-bottom-menu{
+        display: none;
+    }
+    /*header*/
+   
 
+    .home-nav a {
+
+        font-size: 13px;
+        font-weight: bold;
+        margin-right: 4px;
+    }
+
+    .home-nav-date {
+        display: flex;
+        align-items: center;
+    }
+
+    /*main*/
     .home-main-card {
         display: flex;
         flex-wrap: wrap;
@@ -158,7 +172,7 @@
         background-color: #ebebeb;
         box-shadow: rgba(0, 0, 0, 0.075);
         margin-bottom: 10px;
-        
+
     }
 
     .card-container {
