--- a/views/home.html
+++ b/views/home.html
@@ -14,49 +14,50 @@
         <div class="home-image-logo">
 
             <img class="image-logo" src="/images/logo-mercado-liebre.svg" alt="logo Mercado Liebre">
-        </div>
-        <nav>
-            <div class="home-icon-header">
-                <form>
-                    <input class="form-control me-2" type="search" placeholder="Buscar productos, marcas">
-
+            <div class="from-search">
+                <input class="form-input" type="text" placeholder="Buscar productos">
+                
                 </form>
-
-
-                <a class="icon-header"><i class="fa-solid fa-magnifying-glass"></i></a>
-
             </div>
+
             <div class="home-header-cuotas">
                 <i class="fa-solid fa-hand-holding-dollar"></i>
-                <h5>Comprá en cuotas y sin tarjeta de crédito</h5>
-
+                <h6>Comprá en cuotas y sin tarjeta de crédito</h6>
+    
             </div>
-            <ul class="home-nav">
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Tiendas Oficiales</a></li>
-                <li><a href="">Vender</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
-            <ul class="home-nav">
+        </div>
+        <nav>
 
-                <div class="home-nav-date">
-                    <li><a href="">Creá tu cuenta</a></li>
-                    <i class="fa-solid fa-id-card"></i>
 
-                </div>
+            <div class="home-nav">
 
-                <div class="home-nav-date">
-
-                    <li><a href="">Ingresá</a></li>
-                    <i class="fa-solid fa-right-to-bracket"></i>
-                </div>
-
-                <div class="home-nav-date">
-
-                    <li><a href="">Mis compras</a></li>
-                    <i class="fa-sharp fa-solid fa-basket-shopping"></i>
-                </div>
-            </ul>
+                <ul class="home-nav-a">
+                    <li><a href="">Ofertas</a></li>
+                    <li><a href="">Tiendas Oficiales</a></li>
+                    <li><a href="">Vender</a></li>
+                    <li><a href="">Ayuda</a></li>
+                </ul>
+                <ul class="home-nav-b">
+    
+                    <div class="home-nav-date">
+                        <li><a href="">Creá tu cuenta</a></li>
+                        <i class="fa-solid fa-id-card"></i>
+    
+                    </div>
+    
+                    <div class="home-nav-date">
+    
+                        <li><a href="">Ingresá</a></li>
+                        <i class="fa-solid fa-right-to-bracket"></i>
+                    </div>
+    
+                    <div class="home-nav-date">
+    
+                        <li><a href="">Mis compras</a></li>
+                        <i class="fa-sharp fa-solid fa-basket-shopping"></i>
+                    </div>
+                </ul>
+            </div>
 
             <div class="header-bottom-menu">
                 <a class="bottom"><i class="fas fa-bars fa-lg"></i></a>
