--- a/views/home.html
+++ b/views/home.html
@@ -40,14 +40,14 @@
                 <ul class="home-nav-b">
     
                     <div class="home-nav-date">
-                        <li><a href="">Creá tu cuenta</a></li>
+                        <li><a href="/createAccount">Crear cuenta</a></li>
                         <i class="fa-solid fa-id-card"></i>
     
                     </div>
     
                     <div class="home-nav-date">
     
-                        <li><a href="">Ingresá</a></li>
+                        <li><a href="/login">Ingresá</a></li>
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </div>
     
