--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .home-image-logo img {
@@ -17,6 +18,7 @@
     display: flex;
 justify-content: center;
     margin: 15px 0;
+    
 }
 
 .home-nav{
