--- a/views/createAccount.html
+++ b/views/createAccount.html
@@ -32,7 +32,7 @@
             <div class="home-nav">
 
                 <ul class="home-nav-a">
-                    <li><a href="">Ofertas</a></li>
+                    <li><a href="/">Ofertas</a></li>
                     <li><a href="">Tiendas Oficiales</a></li>
                     <li><a href="">Vender</a></li>
                     <li><a href="">Ayuda</a></li>
