--- a/views/home.html
+++ b/views/home.html
@@ -32,7 +32,7 @@
             <div class="home-nav">
 
                 <ul class="home-nav-a">
-                    <li><a href="">Ofertas</a></li>
+                    <li><a href="/">Ofertas</a></li>
                     <li><a href="">Tiendas Oficiales</a></li>
                     <li><a href="">Vender</a></li>
                     <li><a href="">Ayuda</a></li>
@@ -206,20 +206,6 @@
 
             </div>
 
-
-
-
-
-
-            <!-- <article>
-
-                <img src="/images/img-tv-samsung-smart.jpg" alt="Cafetera Moulinex">
-
-                <h3>SmartTv Samsung 43"</h3>
-                <p>$23.200</p>
-                <p>5% off</p>
-            </article> -->
-
         </section>
     </main>
 
@@ -228,11 +214,11 @@
 
 
         <div class="footer-date">
-            <div class="footer-icon">
-                <i class="fa-solid fa-credit-card"></i>
-
-            </div>
             <div>
+                <div class="footer-icon">
+                    <i class="fa-solid fa-credit-card"></i>
+    
+                </div>
                 <strong class="footer-title">Pagá con tarjeta o en efectivo:</strong>
                 <p class="footer-info">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de
@@ -241,12 +227,12 @@
 
             </div>
 
-            <div class="footer-icon">
-                <i class="fa-solid fa-gift"></i>
-
-            </div>
-
+            
             <div>
+                <div class="footer-icon">
+                    <i class="fa-solid fa-gift"></i>
+    
+                </div>
                 <strong class="footer-title">Envío gratis desde $2.500:</strong>
                 <p class="footer-info">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                     productos. Es un beneficio de
@@ -254,12 +240,12 @@
 
             </div>
 
-            <div class="footer-icon">
-
-                <i class="fa-solid fa-user-shield"></i>
-            </div>
-
+            
             <div>
+                <div class="footer-icon">
+    
+                    <i class="fa-solid fa-user-shield"></i>
+                </div>
                 <strong class="footer-title">Seguridad, de principio a fin:</strong>
                 <p class="footer-info">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                     porque
@@ -268,8 +254,8 @@
 
             </div>
 
-            <p class="footer-info"><strong>&copy; 1999-2020 MercadoLiebre S.R.L.</strong></p>
         </div>
+        <p class="footer-info"><strong>&copy; 1999-2020 MercadoLiebre S.R.L.</strong></p>
 
 
 
